[package]
name = "bitchain"
version = "0.1.0"
authors = ["Douglas Lockamy <dlockamy@lockamystudios.com>"]
edition = "2021"
description = "A lightweight virtual filesystem that uses the internet as block storage"
repository = "https://github.com/dlockamy/bitchain"
license = "MIT"
keywords = ["binary", "versioning", "content-addressed", "s3", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
reqwest = { version = "0.11", features = ["json"] }
